docs: enhance JavaFX section in README.md with detailed installation instructions and examples